--- a/maths IQ Game/additon/addition.html
+++ b/maths IQ Game/additon/addition.html
@@ -42,15 +42,15 @@
                     <!-- show random number -->
                     <div class="d-flex justify-content-center mt-2">
                         <div class="col-sm-3">
-                            <button class="btn btn-secondary">55</button>
+                            <button id="random1" class="btn btn-secondary">29</button>
                         </div>
                         <div class="col-sm-1 fw-bold">+</div>
                         <div class="col-sm-3">
-                            <button class="btn btn-secondary">55</button>
+                            <button id="random2" class="btn btn-secondary">63</button>
                         </div>
                         <div class="col-sm-1 fw-bold">=</div>
                         <div class="col-sm-3">
-                            <button class="btn btn-secondary fw-bold">?</button>
+                            <button id="showanswer" class="btn btn-secondary fw-bold">?</button>
                         </div>
                     </div>
                     <!-- input field -->
@@ -59,10 +59,34 @@
                             <input id="input-answer" type="text" placeholder="enter your answer" class="form-control text-center">
                         </div>
                         <div class="col-sm-3">
-                            <button class="btn btn-danger">submit</button>
+                            <button id="submit" class="btn btn-danger">submit</button>
                         </div>
                     </div>
-                    <!-- output display -->
+                    <!-- wrong right -->
+                    <div class="d-flex gap-1 fw-bold justify-content-center mt-1 mb-2">
+                        <div class="col-sm-5">
+                            <button id="right" class="btn  form-control">Right</button>
+                        </div>
+                        <div class="col-sm-5">
+                            <button id="wrong" class="btn  form-control">Wrong</button>
+                        </div>
+                    </div>
+                    <!-- display button -->
+                    <div class="d-flex gap-1 fw-bold justify-content-center mt-1 mb-2">
+                        <div class="col-sm-10">
+                            <button id="display" class="btn btn-secondary  form-control">display Loading...</button>
+                        </div>
+                    </div>
+                    <!-- next and refresh button -->
+                   <div class="d-flex gap-1 fw-bold justify-content-center mt-1 mb-2">
+                            <div class="col-sm-5">
+                                <button id="refresh" class="btn btn-primary form-control">Refresh</button>
+                            </div>
+                            <div class="col-sm-5">
+                                <button id="next" class="btn btn-danger form-control">next</button>
+                            </div>
+                        </div>
+                 
                     <!-- <div class="d-flex justify-content-center mb-3 mt-2">
                         <div class="col-sm-10 d-flex justify-content-center">
                             <button class="w-80 btn btn-secondary">loading...</button>
@@ -72,6 +96,15 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-8 offset-2">
+                <p id="showresuts"></p>
+            </div>
+        </div>
+    </div>
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
