now website completed

--- a/maths IQ Game/Division/level-1.html
+++ b/maths IQ Game/Division/level-1.html
@@ -54,7 +54,7 @@
                         <div class="col-sm-3">
                             <button id="random1" class="btn btn-secondary">29</button>
                         </div>
-                        <div class="col-sm-1 fw-bold">+</div>
+                        <div class="col-sm-1 mt-1">%</div>
                         <div class="col-sm-3">
                             <button id="random2" class="btn btn-secondary">63</button>
                         </div>
@@ -125,7 +125,7 @@
                 <div class="card">
                     <p style="text-align: center; margin-top: 10px; font-weight: bold;">Achive At-least 4 attempt and 40 percentage</p>
                     <p id="saycongrate" class="fw-bold" style="text-align: center; color: red; margin-top: 5px;"></p>
-                <button id="Level-2" class="btn btn-success fw-bold  mb-2 form-control"><a href="./level2.html" style="text-decoration: none; color: white;">Level 2 </a></button>
+                <button id="Level-2" class="btn btn-success fw-bold  mb-2 form-control"><a href="./level-2.html" style="text-decoration: none; color: white;">Level 2 </a></button>
                    
 
                 </div>
@@ -133,7 +133,7 @@
         </div>
 
 
-        <script src="./level1.js"></script>
+        <script src="./level-1.js"></script>
 </body>
 
 </html>
