--- a/maths IQ Game/subtrication/level-5.html
+++ b/maths IQ Game/subtrication/level-5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>level-1</title>
+    <title>level-5</title>
     <!-- connect js file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
@@ -36,12 +36,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 text-center text-bold text-white bg-dark p-2">
-                <h3>Level 1 <i class="mb-1 em em-star-struck" aria-role="presentation"
-                        aria-label="GRINNING FACE WITH STAR EYES"></i></h3>
+                <h3>Level 5 <i class="mb-1 em em-grinning" aria-role="presentation" aria-label="GRINNING FACE" style="width: 27px;"></i></h3>
             </div>
             <!-- left pic -->
             <div class="col-sm-4 mt-5">
-                <img src="https://qph.cf2.quoracdn.net/main-qimg-63ad938c3501cd11836085cf1a8bf460-lq" width="324px" height="343px" alt="">
+                <img src="https://static.vecteezy.com/system/resources/previews/025/003/246/original/cute-cartoon-boy-student-character-on-transparent-background-generative-ai-png.png" width="300px" height="343px" alt="">
             </div>
             <!-- center div -->
             <div class="col-sm-4  mt-2 text-bold text-center">
@@ -52,11 +51,11 @@
                     <!-- show random number -->
                     <div class="d-flex justify-content-center mt-2">
                         <div class="col-sm-3">
-                            <button id="random1" class="btn btn-secondary">29</button>
+                            <button id="random1" class="btn btn-secondary"></button>
                         </div>
-                        <div class="col-sm-1 fw-bold">+</div>
+                        <div class="col-sm-1 fw-bold">-</div>
                         <div class="col-sm-3">
-                            <button id="random2" class="btn btn-secondary">63</button>
+                            <button id="random2" class="btn btn-secondary"></button>
                         </div>
                         <div class="col-sm-1 fw-bold">=</div>
                         <div class="col-sm-3">
@@ -76,10 +75,10 @@
                     <!-- wrong right -->
                     <div class="d-flex gap-1 fw-bold justify-content-center mt-1 mb-2">
                         <div class="col-sm-5">
-                            <button id="right" class="btn  form-control">Right</button>
+                            <button style="border-radius: 50%;" id="right" class="btn">Right</button>
                         </div>
                         <div class="col-sm-5">
-                            <button id="wrong" class="btn  form-control">Wrong</button>
+                            <button style="border-radius: 50%;" id="wrong" class="btn">Wrong</button>
                         </div>
                     </div>
                     <!-- display button -->
@@ -102,7 +101,7 @@
             </div>
             <!-- right pic -->
             <div class="col-sm-4 mt-5">
-                <img src="https://qph.cf2.quoracdn.net/main-qimg-63ad938c3501cd11836085cf1a8bf460-lq" width="324px" height="343px" alt="">
+                <img src="https://static.vecteezy.com/system/resources/previews/025/003/263/original/cute-cartoon-boy-student-character-on-transparent-background-generative-ai-png.png" width="300px" height="343px" alt="">
             </div>
         </div>
         <!-- see results -->
@@ -123,9 +122,8 @@
         <div class="row" id="level2-desable">
             <div class="col-sm-4 offset-4 mb-5">
                 <div class="card">
-                    <p style="text-align: center; margin-top: 10px; font-weight: bold;">Achive At-least 4 attempt and 40 percentage</p>
-                    <p id="saycongrate" class="fw-bold" style="text-align: center; color: red; margin-top: 5px;"></p>
-                <button id="Level-2" class="btn btn-success fw-bold  mb-2 form-control"><a href="./level2.html" style="text-decoration: none; color: white;">Level 2 </a></button>
+                    <p style="text-align: center; margin-top: 10px; font-weight: bold;">Achive At-least 9 attempt and 90 percentage</p>
+                    <p id="saycongrate" class="fw-bold" style="text-align: center; color: red; "></p>
                    
 
                 </div>
@@ -133,7 +131,7 @@
         </div>
 
 
-        <script src="./level1.js"></script>
+        <script src="./level-5.js"></script>
 </body>
 
 </html>
