--- a/maths IQ Game/index.html
+++ b/maths IQ Game/index.html
@@ -118,7 +118,7 @@
     <div id="container">
         <a href="./main.html" class="button button--hoo">
             <div class="button__wrapper">
-                <span class="button__text">Lets Go</span>
+                <span class="button__text">Lets Play </span>
             </div>
             <div class="characterBox">
                 <div class="character wakeup">
