now user can enter player name

--- a/maths IQ Game/index.html
+++ b/maths IQ Game/index.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-sm-6 offset-3 mt-5">
                 <div class="card">
-                    <span class="fw-bold">"I am deeply thankful to my best friend, Awais Saleem, for his
+                    <span class="fw-bold" style="position: fixed; top: 13%; left: 20px; right: 20px;">"I am deeply thankful to my best friend, Awais Saleem, for his
                         invaluable
                         inspiration and support in
                         conceiving the idea for this website. His creativity and encouragement have been
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-sm-3 offset-4  mt-5">
                 <div class="card text-center">
-                    <span class="fw-bold">currently home page unavbalible</span>
+                    <span class="fw-bold" style="position: fixed; top: 13%; left: 35%; margin: 0px auto;">currently home page unavbalible</span>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="row">
             <div class="col-sm-3 offset-4  mt-5">
                 <div class="card text-center">
-                    <span class="fw-bold">currently Blogs unavbalible</span>
+                    <span class="fw-bold" style="position: fixed; top: 13%; left: 35%; margin: 0px auto;">currently Blogs unavbalible</span>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-sm-3 offset-4  mt-5">
                 <div class="card text-center">
-                    <span class="fw-bold">currently our Services unavbalible</span>
+                    <span class="fw-bold" style="position: fixed; top: 13%; left: 35%; margin: 0px auto;">currently our Services unavbalible</span>
                 </div>
             </div>
         </div>
@@ -116,8 +116,8 @@
 
     <!-- button -->
     <div id="container">
-        <a href="./main.html" class="button button--hoo">
-            <div class="button__wrapper">
+        <a href="./main.html" class="button button--hoo" id="letsPlayButton">
+          <div class="button__wrapper">
                 <span class="button__text">Lets Play </span>
             </div>
             <div class="characterBox">
@@ -141,6 +141,8 @@
     </div>
 
     <!-- Bootstrap JS and dependencies -->
+    <script src="./index.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -154,6 +156,7 @@
             }
         }
     </script>
+    
 </body>
 
 </html>
