--- a/maths IQ Game/main.html
+++ b/maths IQ Game/main.html
@@ -110,7 +110,7 @@
             <div class="row  text-bold">
 
                 <div class="col-sm-2 mt-5">
-                    <div class="card p-3" id="add-background" style="width:300px ; height: 343px;">
+                    <div class="card p-2" id="add-background" style="width:280px ; height: 343px;">
                         <h1 class="mt-5 fw-bold">muliplication</h1>
                         <div class="container">
 
@@ -141,11 +141,11 @@
                 <!-- multiply img  -->
                 <div class="col-sm-3 mt-5">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwl4r6LgN0fCfXIKHYnbdYWmHoAe2QfwCoqw&s"
-                        width="300px" height="343px" alt="">
+                        width="280px" height="343px" alt="" style="margin-left: 50px;">
 
                 </div>
                 <!-- vertical line -->
-                <div class="vl col-sm-1">
+                <div class="vl col-sm-1" style="margin-left: 10px;">
 
                 </div>
                 <!-- division img -->
@@ -182,6 +182,18 @@
                 </div>
             </div>
         </div>
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                const playerName = localStorage.getItem("playerName");
+                const addPlayerNameElement = document.getElementById("AddplayerName");
+        
+                if (playerName) {
+                    addPlayerNameElement.innerHTML += ` ${playerName}`;
+                } else {
+                    addPlayerNameElement.innerHTML += " Player1";
+                }
+            });
+        </script>
         <script src="./index.js"></script>
 </body>
 
