--- a/maths IQ Game/index.html
+++ b/maths IQ Game/index.html
@@ -139,9 +139,9 @@
             </div>
         </a>
     </div>
-    <!-- <div>
+    <div>
         <p id="madeby">Made By: Naveed Rashid</p>
-    </div> -->
+    </div>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="./index.js"></script>
